Fix syntax scrolling on mobile devices Make label font family, font size and padding more consistent Disable text selection in index Fix label width

--- a/Styles/Main.css
+++ b/Styles/Main.css
@@ -141,6 +141,11 @@ body {
 
             min-width: calc(100% - var(--main-padding-l));
             max-width: calc(100% - var(--main-padding-l));
+
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
         }
 
         /* Inedx elements */
@@ -205,7 +210,7 @@ body {
             background-color: transparent;
             margin: var(--sep-3) 0 0;
             min-height: 0;
-            max-height: 0;
+            max-height: 0
         }
         sep-4- {
             background-color: transparent;
